# Noodle-Stock-Tracker-

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  Stock Tracker.py  agent.py  analytics.py  analytics_app.py  api.py  app.py  batch_ingest.py  cache.py  data_store.py  docker-compose.yml  llm_router.py  migrate_library_categories.py  portfolio_app.py  rag.py  requirements-analytics.txt  requirements-core.txt  requirements.txt  risk.py  utils.py  watcher.py
desktop-analytics/: package-lock.json  package.json
desktop-analytics/src-tauri/: Cargo.toml  tauri.conf.json
desktop-analytics/src-tauri/src/: lib.rs  main.rs
desktop-portfolio/: package-lock.json  package.json
desktop-portfolio/src-tauri/: Cargo.toml  tauri.conf.json
desktop-portfolio/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
ui/: analyst.py  asset_tracker.py  catalyst_news.py  catalysts.py  common.py  court_docket.py  dashboard.py  favorites.py  federal_contracts.py  global_markets.py  history.py  intelligence.py  library.py  market_watch.py  monetary_policy.py  peer_matrix.py  risk_tab.py  valuation.py
